--- a/css/content.css
+++ b/css/content.css
@@ -1,15 +1,110 @@
-.cool-around-box__content {
+.good-box__content {
     width: 1000px;
     margin: 0 auto;
-    height: 500px;
-    border: 1px solid;
 }
 
 .content__info {
     width: 750px;
     float: right;
-    border: 1px solid;
-    height: 500px;
+    margin-bottom: 50px;
+}
+
+.info-image {
+    width: 100%;
+    height: 300px;
+    margin-top: 50px;
+}
+
+.info-image img {
+    width: 100%;
+    height: 100%;
+}
+
+.info-title {
+    font-family: "Open Sans", sans-serif;
+    font-size: 21pt;
+    padding-top: 20px;
+    line-height: 1.2em;
+    letter-spacing: 1px;
+    font-weight: 300;
+    color: #222;
+}
+
+.info-text {
+    font-family: "Open Sans", sans-serif;
+    font-size: 17px;
+    line-height: 23px;
+    font-weight: 300;
+    color: #232323;
+
+}
+
+.info-quote {
+    height: 300px;
+    padding-top: 30px;
+}
+
+.info-quote blockquote {
+    width: 500px;
+    line-height: 22px;
+    font-style: italic;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    padding-top: 10px;
+    padding-left: 30px;
+}
+
+blockquote:before {
+    color: #69ba76;
+    content: "\201c"; /* Непечатаемый символ слева */
+    font-size: 4em;
+    font-weight: bold;
+    line-height: 0.1em;
+    margin-left: -60px;
+    margin-right: 20px;
+    vertical-align: -.4em;
+    font-family:"Times New Roman", sans-serif;
+}
+
+.author {
+    display: block;
+    height: 50px;
+    margin-top: 30px;
+}
+
+.author-photo {
+    display: inline-block;
+    vertical-align: top;
+    height: 100%;
+}
+
+.author-photo img {
+    width: 100%;
+    margin-top: 5px;
+}
+
+.author-info {
+    display: inline-block;
+    vertical-align: top;
+    font-family: "Open Sans", sans-serif;
+    font-size: 9px;
+    font-style: normal;
+    line-height: 1.8em;
+    padding-left: 5px;
+    padding-top: 1px;
+}
+
+.author-name {
+    font-weight: bold;
+    font-size: 13px;
+}
+
+.author-prof {
+    font-size:13px;
+}
+blockquote > p:first-child {
+    display: inline;
 }
 
 .empty-clear {
@@ -17,3 +112,5 @@
     width: 100%;
     clear: both;
 }
+
+
